uptime-kuma/uptime-kuma-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-wave: "0"
