uptime-kuma/uptime-kuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: uptime-kuma-app
  name: uptime-kuma-app
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uptime-kuma-app
      app: uptime-kuma-app
  template:
    metadata:
      annotations:
      labels:
        io.kompose.service: uptime-kuma-app
        app: uptime-kuma-app
    spec:
        containers:
          - image: louislam/uptime-kuma:2
            name: uptime-kuma-app
            ports:
              - containerPort: 3001
                protocol: TCP
            resources:
              requests:
                cpu: 100m
                memory: 128Mi
              limits:
                cpu: 200m
                memory: 256Mi
            volumeMounts:
              - name: uptime-kuma-data
                mountPath: /app/data
        volumes:
          - name: uptime-kuma-data
            persistentVolumeClaim:
              claimName: uptime-kuma-data
        restartPolicy: Always
